--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,5 @@
     <string name="stop">Stop (%d)</string>
     <string name="no_devices_found">No devices were found!</string>
     <string name="scanning_eloc_devices"><![CDATA[<scanning for eloc devices>]]></string>
+    <string name="off">OFF</string>
 </resources>
