--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,114 +1,117 @@
 <resources>
-    <string name="app_name">ELOC Control Panel</string>
-    <string name="devices">ELOC Devices</string>
-    <string name="device_name">Change Device Name</string>
-    <string name="status">Status</string>
-    <string name="ranger">Ranger:</string>
-    <string name="sd_card">SD Card</string>
-    <string name="space_available">Space available</string>
-    <string name="battery_level">Battery Level</string>
-    <string name="gps_location">GPS Accuracy</string>
-    <string name="accuracy"> </string>
-    <string name="hours_since_recording_started">Current recording time</string>
-    <string name="last_time_sync">Last Time Sync</string>
-    <string name="hours_since_last_sync">Hours since last sync</string>
-    <string name="settings">Settings</string>
-    <string name="sample_rate">Sample Rate</string>
-    <string name="hours_per_file">Hours per File</string>
-    <string name="gain">Gain</string>
-    <string name="please_wait">Please wait…</string>
-    <string name="gps">gps</string>
-    <string name="firmware">Firmware</string>
-    <string name="uptime">Uptime</string>
-    <string name="rec_time_since_boot">Rec Since Boot</string>
-    <string name="bluetooth_recording">Bluetooth Recording</string>
-    <string name="last_gps_accuracy">Last GPS Accuracy</string>
-    <string name="last_gps_location">Last GPS Location</string>
-    <string name="battery_voltage">Battery Voltage</string>
-    <string name="wait">Wait…</string>
-    <string name="update_settings">Update Settings</string>
-    <string name="filename">Filename</string>
-    <string name="_44k">44k</string>
-    <string name="_32k">32k</string>
-    <string name="_22k">22k</string>
-    <string name="_16k">16K</string>
-    <string name="_8k">8k</string>
-    <string name="recording_time_per_file">Recording time per file</string>
+    <string name="_10s">10s</string>
     <string name="_12h">12h</string>
-    <string name="_4h">4h</string>
+    <string name="_16k">16K</string>
     <string name="_1h">1h</string>
     <string name="_1m">1m</string>
-    <string name="_10s">10s</string>
-    <string name="eloc_bt_name">ELOC BT name</string>
-    <string name="low">Low</string>
-    <string name="high">High</string>
-    <string name="bluetooth_state_when_recording">Bluetooth state when recording</string>
-    <string name="update_reboot_upgrade_firmware">Update (reboot + upgrade firmware)</string>
-    <string name="sync_template">sync SUCCESS\n Your phone differs by %d ms"</string>
-    <string name="initializing">Initializing…</string>
-    <string name="yes_permissions">yes, grant permissions</string>
-    <string name="grant_permissions">Grant permissions</string>
-    <string name="preparing">Preparing…</string>
-    <string name="checking_permissions">Checking permissions</string>
-    <string name="rec_state_recording">STOP RECORDING</string>
-    <string name="rec_state_ready">START RECORDING</string>
-    <string name="rec_state_wait">Please wait…</string>
-    <string name="sd_card_error_button">SD card error button</string>
-    <string name="custom_command">Custom command</string>
-    <string name="run">Run</string>
-    <string name="recording">Recording</string>
-    <string name="file_header_name">Grid ID</string>
-    <string name="file_header">Grid ID</string>
-    <string name="command">Command</string>
-    <string name="microphone_type">Microphone type</string>
-    <string name="microphone_gain">Microphone gain</string>
-    <string name="session_id">Session ID</string>
-    <string name="appversion">App Version</string>
-    <string name="instructions">Instructions @ <u>wildlifebug.com</u></string>
-    <string name="refresh_list">Refresh List</string>
-    <string name="upload_eloc_status">Upload Eloc Status</string>
-    <string name="connected">Connected</string>
-    <string name="refreshing">Refreshing…</string>
+    <string name="_22k">22k</string>
+    <string name="_32k">32k</string>
+    <string name="_44k">44k</string>
+    <string name="_4h">4h</string>
+    <string name="_8k">8k</string>
+    <string name="accuracy"> </string>
     <string name="advanced_options">Advanced options</string>
-    <string name="scan_error">Something went wrong.\n\nFailed to scan for bluetooth devices!</string>
-    <string name="loading_map">Loading map…</string>
-    <string name="filter">Filter</string>
-    <string name="filter_by_ranger">Filter by ranger</string>
-    <string name="hide_filter">Hide filter</string>
-    <string name="find_your_elocs">Find your ELOCs</string>
-    <string name="show_all_elocs">Show all ELOCs</string>
-    <string name="map_button_text">FIND MY ELOC</string>
-    <string name="no_bluetooth_adapter">A bluetooth adapter was not found on this device.\n\nTry using a device that has a bluetooth adapter.</string>
+    <string name="a_few_things_must_be_done_to_proceed">A few things must be done to proceed…</string>
+    <string name="app_name">ELOC Control Panel</string>
+    <string name="appversion">App Version</string>
+    <string name="battery_level">Battery Level</string>
+    <string name="battery_voltage">Battery Voltage</string>
+    <string name="bluetooth_content_description">Bluetooth permission needed</string>
+    <string name="bluetooth_disabled">Bluetooth disabled</string>
     <string name="bluetooth_error">Bluetooth error</string>
     <string name="bluetooth_off_message">You must turn on bluetooth\nto proceed</string>
-    <string name="turn_on">Turn on</string>
-    <string name="bluetooth_disabled">Bluetooth disabled</string>
     <string name="bluetooth_permission_required_message">You must enable bluetooth permission\nto proceed\n\nOn newer devices, enable the permission for\n\"Nearby devices\"\nin the permissions section</string>
-    <string name="location_permission_required_message">You must enable location permission\nto proceed</string>
-    <string name="enable">Enable</string>
-    <string name="location_permission_required">Location permission required</string>
-    <string name="bluetooth_content_description">Bluetooth permission needed</string>
-    <string name="refresh">Refresh</string>
-    <string name="elocs_with_unknown_location">ELOCS with unknown location</string>
-    <string name="location_service_usage_title">Location Service Usage</string>
-    <string name="location_service_usage_message">Note that %s collects location data\nto enable the maps feature.</string>
-    <string name="a_few_things_must_be_done_to_proceed">A few things must be done to proceed…</string>
-    <string name="set_location_permission">Set Location Permission</string>
-    <string name="enable_location">Enable Location</string>
-    <string name="set_bluetooth_permissions">Set Bluetooth Permissions</string>
-    <string name="unsupported_device">Unsupported device</string>
-    <string name="unsupported_device_message">This device does not support Bluetooth LE.\nTry running the app on a newer device</string>
-    <string name="enable_bluetooth">Enable bluetooth</string>
-    <string name="permission_required">Permission required</string>
-    <string name="location_service_rationale">%s needs to use location service to interact with bluetooth devices</string>
     <string name="bluetooth_rationale">%s needs to connect with bluetooth devices</string>
+    <string name="bluetooth_recording">Bluetooth Recording</string>
+    <string name="bluetooth_state_when_recording">Bluetooth state when recording</string>
+    <string name="checking_permissions">Checking permissions</string>
+    <string name="command">Command</string>
+    <string name="connected">Connected</string>
+    <string name="custom_command">Custom command</string>
+    <string name="device_name">Change Device Name</string>
+    <string name="devices">ELOC Devices</string>
+    <string name="eloc_bt_name">ELOC BT name</string>
+    <string name="elocs_with_unknown_location">ELOCS with unknown location</string>
+    <string name="enable_bluetooth">Enable bluetooth</string>
+    <string name="enable">Enable</string>
+    <string name="enable_location">Enable Location</string>
+    <string name="file_header">Grid ID</string>
+    <string name="file_header_name">Grid ID</string>
+    <string name="filename">Filename</string>
+    <string name="filter_by_ranger">Filter by ranger</string>
+    <string name="filter">Filter</string>
+    <string name="find_your_elocs">Find your ELOCs</string>
+    <string name="firmware">Firmware</string>
+    <string name="gain">Gain</string>
+    <string name="gps">gps</string>
+    <string name="gps_location">GPS Accuracy</string>
     <string name="grant_permission">Grant Permission</string>
-    <string name="user_action_required">User action required</string>
-    <string name="manual_location">You must manually enable the location permission to use location for bluetooth devices</string>
+    <string name="grant_permissions">Grant permissions</string>
+    <string name="hide_filter">Hide filter</string>
+    <string name="high">High</string>
+    <string name="hours_per_file">Hours per File</string>
+    <string name="hours_since_last_sync">Hours since last sync</string>
+    <string name="hours_since_recording_started">Current recording time</string>
+    <string name="initializing">Initializing…</string>
+    <string name="instructions">Instructions @ <u>wildlifebug.com</u></string>
+    <string name="last_gps_accuracy">Last GPS Accuracy</string>
+    <string name="last_gps_location">Last GPS Location</string>
+    <string name="last_time_sync">Last Time Sync</string>
+    <string name="loading_map">Loading map…</string>
+    <string name="location_permission_required">Location permission required</string>
+    <string name="location_permission_required_message">You must enable location permission\nto proceed</string>
+    <string name="location_service_rationale">%s needs to use location service to interact with bluetooth devices</string>
+    <string name="location_service_usage_message">Note that %s collects location data\nto enable the maps feature.</string>
+    <string name="location_service_usage_title">Location Service Usage</string>
+    <string name="low">Low</string>
     <string name="manual_bluetooth">You must manually enable the bluetooth permissions to connect with bluetooth devices</string>
-    <string name="open_settings">Open settings</string>
-    <string name="stop">Stop (%d)</string>
+    <string name="manual_location">You must manually enable the location permission to use location for bluetooth devices</string>
+    <string name="map_button_text">FIND MY ELOC</string>
+    <string name="microphone_gain">Microphone gain</string>
+    <string name="microphone_type">Microphone type</string>
+    <string name="no_bluetooth_adapter">A bluetooth adapter was not found on this device.\n\nTry using a device that has a bluetooth adapter.</string>
     <string name="no_devices_found">No devices were found!</string>
-    <string name="scanning_eloc_devices"><![CDATA[<scanning for eloc devices>]]></string>
     <string name="off">OFF</string>
+    <string name="on">ON</string>
+    <string name="open_settings">Open settings</string>
+    <string name="permission_required">Permission required</string>
+    <string name="please_wait">Please wait…</string>
+    <string name="preparing">Preparing…</string>
+    <string name="ranger">Ranger:</string>
+    <string name="ready">Ready</string>
+    <string name="recording">Recording</string>
+    <string name="recording_time_per_file">Recording time per file</string>
+    <string name="rec_state_ready">START RECORDING</string>
+    <string name="rec_state_recording">STOP RECORDING</string>
+    <string name="rec_state_wait">Please wait…</string>
+    <string name="rec_time_since_boot">Rec Since Boot</string>
+    <string name="refreshing">Refreshing…</string>
+    <string name="refresh_list">Refresh List</string>
+    <string name="refresh">Refresh</string>
+    <string name="run">Run</string>
+    <string name="sample_rate">Sample Rate</string>
+    <string name="scan_error">Something went wrong.\n\nFailed to scan for bluetooth devices!</string>
+    <string name="scanning_eloc_devices"><![CDATA[<scanning for eloc devices>]]></string>
+    <string name="sd_card_error_button">SD card error button</string>
+    <string name="sd_card">SD Card</string>
+    <string name="session_id">Session ID</string>
+    <string name="set_bluetooth_permissions">Set Bluetooth Permissions</string>
+    <string name="set_location_permission">Set Location Permission</string>
+    <string name="settings">Settings</string>
+    <string name="show_all_elocs">Show all ELOCs</string>
+    <string name="space_available">Space available</string>
+    <string name="status">Status</string>
+    <string name="stopping">Stopping</string>
+    <string name="stop">Stop (%d)</string>
+    <string name="sync_template">sync SUCCESS\n Your phone differs by %d ms"</string>
+    <string name="turn_on">Turn on</string>
+    <string name="unsupported_device_message">This device does not support Bluetooth LE.\nTry running the app on a newer device</string>
+    <string name="unsupported_device">Unsupported device</string>
+    <string name="update_reboot_upgrade_firmware">Update (reboot + upgrade firmware)</string>
+    <string name="update_settings">Update Settings</string>
+    <string name="upload_eloc_status">Upload Eloc Status</string>
+    <string name="uptime">Uptime</string>
+    <string name="user_action_required">User action required</string>
+    <string name="wait">Wait…</string>
+    <string name="yes_permissions">yes, grant permissions</string>
 </resources>
