--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="show_all_elocs">Show all ELOCs</string>
     <string name="status">Status</string>
     <string name="stopping">Stopping</string>
-    <string name="stop">Stop (%d)</string>
+    <string name="stop_template">Stop (%d)</string>
     <string name="sync_template">sync SUCCESS\n Your phone differs by %d ms"</string>
     <string name="turn_on">Turn on</string>
     <string name="unsupported_device_message">This device does not support Bluetooth LE.\nTry running the app on a newer device</string>
@@ -108,7 +108,6 @@
     <string name="update_firmware">Update Firmware</string>
     <string name="reboot_update_firmware">Reboot and update firmware</string>
     <string name="update_settings">Update Settings</string>
-    <string name="upload_eloc_status">Upload Eloc Status</string>
     <string name="uptime">Uptime</string>
     <string name="user_action_required">User action required</string>
     <string name="wait">Wait…</string>
@@ -123,10 +122,101 @@
     <string name="large">Large</string>
     <string name="preferences">Preferences</string>
     <string name="input_your_ranger_id">Set your ranger ID</string>
-    <string name="save">SAVE</string>
     <string name="misc">Misc</string>
     <string name="connecting">Connecting…</string>
     <string name="app_restart_required">App restart required</string>
     <string name="app_restart_message">A different font size was set.\nYou must restart the app to apply the requested font size.</string>
     <string name="connection_close_message">The ELOC is set to turn off bluetooth while recording.\n\nThe bluetooth connection will be closed.</string>
+    <string name="app_logo">App logo</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="or">or</string>
+    <string name="sign_in_with_email">Sign in with email</string>
+    <string name="email_address">Email address</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_out">Sign out</string>
+    <string name="create_new_account">Create new account</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="sign_in_existing_account">Sign in existing account</string>
+    <string name="verify_password">Verify password</string>
+    <string name="go_back">Go back</string>
+    <string name="email_address_is_required">Email address is required!</string>
+    <string name="required">Required!</string>
+    <string name="login">Login</string>
+    <string name="password_is_required">Password is required!</string>
+    <string name="passwords_must_match">Passwords must match!</string>
+    <string name="password_too_short">Password must be at least 8 characters long!</string>
+    <string name="oops">Oops!</string>
+    <string name="something_went_wrong">Something went wrong!</string>
+    <string name="account_created">Account created</string>
+    <string name="verification_message">A verification link was sent to %s.\n\nYou must verify your email address to be able to use to your account.</string>
+    <string name="already_verified">Already verified</string>
+    <string name="resend_verification_message">Resend verification message</string>
+    <string name="profile_picture">Profile picture</string>
+    <string name="profile_setup">Profile setup</string>
+    <string name="open_camera">Open camera</string>
+    <string name="open_photo_gallery">Open photo gallery</string>
+    <string name="done">Done</string>
+    <string name="profile_picture_upload_error">Failed to upload profile picture.\nTry again later</string>
+    <string name="desired_user_id">Desired user ID</string>
+    <string name="user_id_rules">User ID must\n* be at least 6 characters long\n* have only letters, digits, or underscores</string>
+    <string name="set_your_desired_user_id">Set your desired user ID</string>
+    <string name="user_id_is_too_short">User ID is too short</string>
+    <string name="user_id_has_invalid_characters">User ID has invalid characters</string>
+    <string name="user_id_is_already_taken">User ID is already taken</string>
+    <string name="invalid_email_address">Invalid email address!</string>
+    <string name="invalid_email_address_or_password">Invalid email address or password</string>
+    <string name="send">Send</string>
+    <string name="password_reset_message">Enter your email address below.\nIf an account registered with that email address exists, a password reset link will be sent.</string>
+    <string name="send_reset_link_error">Failed to send link to the provided email address!</string>
+    <string name="link_sent">Link sent</string>
+    <string name="reset_link_sent_message">A link was sent to the email address you provided.\n\nIt may take a few minutes to arrive, and remember to check your junk mail folder if it is not in your inbox.</string>
+    <string name="email_address_verification">Email address verification</string>
+    <string name="verification_rationale">Your email address is not yet verified.\n\nPlease click the link that was sent to your email address.\nIt may take a few minutes for the message to arrive. Remember to check you junk mail folder, if the message is not in your inbox.</string>
+    <string name="resend_message">Another link was sent to your email address.\n\nIt should arrive within 10 minutes. If the message is not in your inbox, remember to check the junk mail folder too.</string>
+    <string name="resend_failed">Failed to re-send the link to your email address</string>
+    <string name="email_verification">Email verification</string>
+    <string name="redirect_to_sign_in">You will be redirected to the sign in screen.</string>
+    <string name="close_menu">Close menu</string>
+    <string name="edit">Edit</string>
+    <string name="synchronize_clock">Synchronize clock</string>
+    <string name="find_my_eloc">Find my ELOC</string>
+    <string name="upload_eloc_status">Upload ELOC status</string>
+    <string name="my_eloc">My ELOC</string>
+    <string name="bluetooth_settings">Bluetooth settings</string>
+    <string name="browse_eloc_status">Browse ELOC status</string>
+    <string name="landing_page">Landing page</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="new_value">New value</string>
+    <string name="current_value">Current value:</string>
+    <string name="save">Save</string>
+    <string name="invalid_field_data">Invalid field data!</string>
+    <string name="open_drawer_menu">Open drawer menu</string>
+    <string name="close_drawer_menu">Close drawer menu</string>
+    <string name="saving">Saving…</string>
+    <string name="upload_profile_picture_error">Failed to upload profile picture!</string>
+    <string name="account">Account</string>
+    <string name="account_settings">Account settings</string>
+    <string name="manage_account">Manage account</string>
+    <string name="delete_account">Delete account</string>
+    <string name="change">Change</string>
+    <string name="change_password">Change password</string>
+    <string name="change_email_address">Change email address</string>
+    <string name="current_email_address">Current email address:</string>
+    <string name="new_email_address">New email address</string>
+    <string name="submit">Submit</string>
+    <string name="email_address_updated">Your email address has been updated</string>
+    <string name="password_updated">Your password has been updated</string>
+    <string name="invalid_password">Invalid password!</string>
+    <string name="current_password">Current password</string>
+    <string name="new_password">New password</string>
+    <string name="delete_account_message">If you are certain you want to delete your account,\nenter your password below</string>
+    <string name="important_delete_prompt"><u>IMPORTANT: This operation is NOT reversible!</u></string>
+    <string name="failed_to_remove_remote_files">Failed to remove remote files!</string>
+    <string name="failed_to_clear_profile">Failed to clear profile!</string>
+    <string name="failed_to_remove_account">Failed to remove account!</string>
+    <string name="user_id">User ID:</string>
+    <string name="stop_label">Stop</string>
+    <string name="about_app">About app</string>
+    <string name="version_template">Version: %s</string>
 </resources>
