--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="file_header">File Header</string>
     <string name="battery_type">Battery Type</string>
     <string name="battery_volt">Battery Volt</string>
+    <string name="more">More</string>
 </resources>
