Completed settings feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,45 @@
     <string name="applying_changes">Applying changes…</string>
     <string name="updating_values">Updating values…</string>
     <string name="unknown">Unknown</string>
+    <string name="show_details">Show details</string>
+    <string name="type">Type</string>
+    <string name="channel">Channel</string>
+    <string name="use_apll">Use APLL</string>
+    <string name="use_timing_fix">Use Timing Fix</string>
+    <string name="editor">Editor</string>
+    <string name="text_editor_setting_name">Setting: %s</string>
+    <string name="failed_to_save">Failed to save!</string>
+    <string name="invalid_setting">Invalid setting!</string>
+    <string name="error">Error</string>
+    <string name="selection_required">You must make a selection!</string>
+    <string name="recorder_channel">Recorder Channel</string>
+    <string name="recorder_sample_rate">Recorder Sample Rate</string>
+    <string name="intruder">Intruder</string>
+    <string name="enabled">Enabled</string>
+    <string name="threshold">Threshold</string>
+    <string name="intruder_threshold">Intruder Threshold</string>
+    <string name="intruder_windows_ms">Intruder Windows MS</string>
+    <string name="enter_a_valid_number">Enter a valid number</string>
+    <string name="logs">Logs</string>
+    <string name="max_files">Max Files</string>
+    <string name="windows_ms">Windows MS</string>
+    <string name="max_file_size">Max File Size</string>
+    <string name="logs_filename">Log Filename</string>
+    <string name="logs_max_files">Max Log Files</string>
+    <string name="logs_max_file_size">Max Log File Size</string>
+    <string name="enable_at_start">Enable At Start</string>
+    <string name="enable_on_tapping">Enable On Tapping</string>
+    <string name="enable_during_recording">Enable During Recording</string>
+    <string name="bluetooth_timeout_off_seconds">Bluetooth Timeout Off Seconds</string>
+    <string name="minimum_value_error">Value must be at least %d</string>
+    <string name="cpu">CPU</string>
+    <string name="min_frequency">Min Frequency</string>
+    <string name="max_frequency">Max Frequency</string>
+    <string name="minimum_cpu_frequency">Minimum CPU Frequency</string>
+    <string name="maximum_cpu_frequency">Maximum CPU Frequency</string>
+    <string name="general">General</string>
+    <string name="node_name">Node Name</string>
+    <string name="seconds_per_file">Seconds Per File</string>
+    <string name="node_device_name">Node/Device Name</string>
+    <string name="getting_node_name">Getting node name…</string>
 </resources>
